--- a/PCSX2/gamesettings/SCUS-97328_77E61C8A.ini
+++ b/PCSX2/gamesettings/SCUS-97328_77E61C8A.ini
@@ -1,19 +1,24 @@
 [EmuCore/Speedhacks]
-EECycleSkip = 3
-
-
-[Patches]
-Enable = Widescreen 16:9
+EECycleRate = 1
 
 
 [EmuCore/GS]
+Renderer = 12
 upscale_multiplier = 1
+SkipDuplicateFrames = true
+FrameLimitEnable = true
+DisableFramebufferFetch = true
+DisableDualSourceBlend = true
+DisableShaderCache = true
+DisableVertexShaderExpand = true
 
 
 [EmuCore]
 
 
 [EmuCore/CPU]
+AffinityControlMode = 1
 
 
 [Framerate]
+NominalScalar = 0.9
