--- a/PCSX2/gamesettings/SLUS-21355_60A42FF5.ini
+++ b/PCSX2/gamesettings/SLUS-21355_60A42FF5.ini
@@ -1,5 +1,4 @@
 [Patches]
-Enable = Widescreen 16:9
 Enable = disable Motion blur
 
 
@@ -10,11 +9,13 @@ Slot1_Enable = true
 
 [EmuCore/GS]
 pcrtc_antiblur = true
-upscale_multiplier = 2
+Renderer = -1
 
 
 [EmuCore/Speedhacks]
-vuThread = true
+vu1Instant = true
+EECycleRate = 0
+EECycleSkip = 0
 
 
 [Framerate]
