--- a/PCSX2/gamesettings/SLUS-21361_25FC361B.ini
+++ b/PCSX2/gamesettings/SLUS-21361_25FC361B.ini
@@ -1,6 +1,7 @@
-[Patches]
-Enable = Widescreen 16:9
-
-
 [EmuCore/GS]
 upscale_multiplier = 1
+
+
+[MemoryCards]
+Slot1_Enable = true
+Slot1_Filename = vivicard.ps2
