--- a/PCSX2/gamesettings/SCES-53202_1F88BECD.ini
+++ b/PCSX2/gamesettings/SCES-53202_1F88BECD.ini
@@ -1,2 +1,94 @@
 [Patches]
 Enable = Widescreen 16:9
+
+
+[Pad]
+UseGameSettingsForController = false
+GameSettingsInitialized = true
+MultitapPort1 = false
+MultitapPort2 = false
+
+
+[InputSources]
+Keyboard = true
+Mouse = true
+SDL = true
+SDLControllerEnhancedMode = false
+
+
+[Pad1]
+Type = DualShock2
+Up = SDL-0/-LeftY
+Right = SDL-0/+LeftX
+Down = SDL-0/+LeftY
+Left = SDL-0/-LeftX
+Triangle = SDL-0/Y
+Circle = SDL-0/B
+Cross = SDL-0/A
+Square = SDL-0/X
+Select = SDL-0/Back
+Start = SDL-0/Start
+L1 = SDL-0/LeftShoulder
+L2 = SDL-0/+LeftTrigger
+R1 = SDL-0/RightShoulder
+R2 = SDL-0/+RightTrigger
+L3 = SDL-0/LeftStick
+R3 = SDL-0/RightStick
+Analog = Keyboard/Semicolon
+LUp = SDL-0/-LeftY
+LRight = SDL-0/+LeftX
+LDown = SDL-0/+LeftY
+LLeft = SDL-0/-LeftX
+RUp = SDL-0/-RightY
+RRight = SDL-0/+RightX
+RDown = SDL-0/+RightY
+RLeft = SDL-0/-RightX
+LargeMotor = SDL-0/LargeMotor
+SmallMotor = SDL-0/SmallMotor
+AxisScale = 1.33
+LargeMotorScale = 1
+SmallMotorScale = 1
+InvertL = 0
+InvertR = 0
+Deadzone = 0
+ButtonDeadzone = 0
+PressureModifier = 0.5
+
+
+[Pad2]
+Type = None
+
+
+[Pad3]
+Type = None
+
+
+[Pad4]
+Type = None
+
+
+[Pad5]
+Type = None
+
+
+[Pad6]
+Type = None
+
+
+[Pad7]
+Type = None
+
+
+[Pad8]
+Type = None
+
+
+[USB1]
+Type = None
+hidmouse_LeftButton = Pointer-0/LeftButton
+hidmouse_RightButton = Pointer-0/RightButton
+hidmouse_MiddleButton = Pointer-0/MiddleButton
+
+
+[USB2]
+Type = None
